// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="sc-htpNat ilDLPD"
  >
    <ul
      className="sc-bxivhb fcqCpQ"
    >
      <li
        className="sc-ifAKCX sc-bZQynM lmgRuG isSelected"
      >
        <a
          className="sc-EHOje bnvzan"
          href="/"
          onClick={[Function]}
        >
          <div
            className="sc-bdVaJa jgoXzo isNone"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              7
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            All
          </span>
        </a>
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/resource4"
          onClick={[Function]}
          title="resource4"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            resource4
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY"
            >
              
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK"
            >
              <time
                dateTime="2017-12-21T15:36:03.000Z"
                title="2017-12-21T15:36:03.000Z"
              >
                &lt;5s ago
              </time>
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/resource9"
          onClick={[Function]}
          title="resource9"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            resource9
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY"
            >
              
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK"
            >
              <time
                dateTime="2017-12-21T15:35:58.000Z"
                title="2017-12-21T15:35:58.000Z"
              >
                &lt;15s ago
              </time>
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/resource19"
          onClick={[Function]}
          title="resource19"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            resource19
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY"
            >
              
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK"
            >
              <time
                dateTime="2017-12-21T15:35:48.000Z"
                title="2017-12-21T15:35:48.000Z"
              >
                &lt;30s ago
              </time>
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/resource29"
          onClick={[Function]}
          title="resource29"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            resource29
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY"
            >
              
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK"
            >
              <time
                dateTime="2017-12-21T15:35:38.000Z"
                title="2017-12-21T15:35:38.000Z"
              >
                &lt;30s ago
              </time>
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/resource39"
          onClick={[Function]}
          title="resource39"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            resource39
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY"
            >
              
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK"
            >
              <time
                dateTime="2017-12-21T15:35:28.000Z"
                title="2017-12-21T15:35:28.000Z"
              >
                &lt;45s ago
              </time>
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/resource49"
          onClick={[Function]}
          title="resource49"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            resource49
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY"
            >
              
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK"
            >
              <time
                dateTime="2017-12-21T15:35:18.000Z"
                title="2017-12-21T15:35:18.000Z"
              >
                &lt;1m ago
              </time>
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/resource54"
          onClick={[Function]}
          title="resource54"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            resource54
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY"
            >
              
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK"
            >
              <time
                dateTime="2017-12-21T15:35:13.000Z"
                title="2017-12-21T15:35:13.000Z"
              >
                &lt;1m ago
              </time>
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<section
  className="Sidebar is-closed"
>
  <nav
    className="sc-htpNat ilDLPD"
  >
    <ul
      className="sc-bxivhb fcqCpQ"
    >
      <li
        className="sc-ifAKCX sc-bZQynM lmgRuG isSelected"
      >
        <a
          className="sc-EHOje bnvzan"
          href="/"
          onClick={[Function]}
        >
          <div
            className="sc-bdVaJa jgoXzo isNone"
          >
            <span>
               
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            All
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders list of resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="sc-htpNat ilDLPD"
  >
    <ul
      className="sc-bxivhb fcqCpQ"
    >
      <li
        className="sc-ifAKCX sc-bZQynM lmgRuG isSelected"
      >
        <a
          className="sc-EHOje bnvzan"
          href="/"
          onClick={[Function]}
        >
          <div
            className="sc-bdVaJa jgoXzo isNone"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              2
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            All
          </span>
        </a>
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            vigoda
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY"
            >
              
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK"
            >
              <time
                dateTime="2017-12-21T15:36:07.000Z"
                title="2017-12-21T15:36:07.000Z"
              >
                &lt;5s ago
              </time>
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
          title="snack"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            snack
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY"
            >
              
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK"
            >
              <time
                dateTime="2017-12-21T15:35:57.000Z"
                title="2017-12-21T15:35:57.000Z"
              >
                &lt;15s ago
              </time>
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="sc-htpNat ilDLPD"
  >
    <ul
      className="sc-bxivhb fcqCpQ"
    >
      <li
        className="sc-ifAKCX sc-bZQynM lmgRuG isSelected"
      >
        <a
          className="sc-EHOje bnvzan"
          href="/"
          onClick={[Function]}
        >
          <div
            className="sc-bdVaJa jgoXzo isNone"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              2
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            All
          </span>
        </a>
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            vigoda
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY empty"
            >
              —
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK isEmpty"
            >
              —
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
      <li
        className="sc-ifAKCX gQJOvT  isBuilding"
      >
        <a
          className="sc-EHOje bnvzan SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
          title="snack"
        >
          <div
            className="sc-bdVaJa jgoXzo isBuilding"
          >
            <span
              className="sc-bwzfXH jBiaPF"
            >
              1
            </span>
          </div>
          <span
            className="sc-htoDjs sc-dnqmqq jjaDsB"
          >
            snack
          </span>
          <div
            className="sc-iwsKbI fEZOaG"
          >
            <span
              className="sc-htoDjs sc-gZMcBi gdzMjY empty"
            >
              —
            </span>
            <span
              className="sc-htoDjs sc-gqjmRU kNfbHK isEmpty"
            >
              —
            </span>
          </div>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is updating or update is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;
